--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.777.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
+    "multer": "^1.4.2",
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
@@ -27,6 +30,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.4",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
