--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.6",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.14",
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
@@ -31,6 +33,7 @@
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
+    "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
